--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 .game-board {
     width: 100%;
-    height: 500px;
+    height: 700px;
     border-bottom: 15px solid rgb(22, 136, 22);
     margin: 0 auto;
     position: relative;
@@ -36,6 +36,23 @@
     position: absolute;
     animation: cloud-animation 15s infinite;
 }
+
+.overimage {
+    position: absolute;
+    top: 150px;
+    left: 600px;
+    width: 350px;
+    display: none;
+}
+
+.restart {
+    position: absolute;
+    width: 150px;
+    left: 690px;
+    top: 350px;
+    display: none;
+}
+
 @keyframes mario-jump {
     0% {
         bottom: 0;
